# BirTomo

./: .gitattributes  .gitignore  LICENSE  N_regularization.py  README.md  Reconstruct_experimental_data.ipynb  User_Interface.py  __init__.py  classes.dot  environment.yml  error_handling.py  forward_clean.py  forward_intensity.py  forward_streamlit.py  forward_waveblocks.py  ground_truth.py  initialization.ipynb  intensity2ret_azim.py  jones.py  jones_class.py  jones_forward.py  jones_torch.py  loss_functions.py  main_3D_bire_recon_pytorch.py  main_3d_reconstruction.py  main_3d_reconstruction_12_20.py  main_forward_projection.py  main_simulate_full_image_VolumeRaytraceLFM.py  main_test_VolumeRaytraceLFM.py  main_test_VolumeRaytrace_numpy.py  my_siddon.py  object.py  open_and_save_volumes.py  packages.txt  plot_volume.py  plotting_tools.py  pyproject.toml  pytest.ini  ray.py  ray_optics.py  (+19 more)
.streamlit/: config.toml
2025_02/: RO notes.docx
PolScopeProjector/: PolVolumeProjectors.py  __init__.py  abstract_classes.py  siddon.py  test-siddon.py
VolumeRaytraceLFM/: __init__.py  abstract_classes.py  birefringence_base.py  birefringence_implementations.py  combine_lenslets.py  dataset_creation.py  file_manager.py  files_utils.py  iter_config.json  jones_calculus.py  loss_functions.py  my_siddon.py  optic_config.py  ray.py  reconstructions.py  setup_parameters.py  simulations.py  util.py  visualization_utils.py
analyzing/: view_parameters.ipynb  view_volume.py
config/: IterConfigMac.json  IterConfigWin.json  OpticalConfigSpiculeWin.json  OpticalConfigVoxelsMac.json  OpticalConfigVoxelsWin.json  OpticalConfigWin.json  iter_config.json  iter_config_sphere.json  iteration_parameters A B etc.json  optical_config.json  optical_config1.json  optical_config2.json  optical_config_default.json  optical_config_sphere.json  optical_config_voxel.json  optical_config_voxels.json  optical_info A B etc.json
config_settings/: iter_config.json  iter_config_helix.json  iter_config_sphere.json  iter_config_sphere_large_vol.json  iter_config_xylem.json  iter_config_xylem_quick.json  metrics.json  optical_config2.json  optical_config3.json  optical_config_helix.json  optical_config_helix_z7.json  (+8 more)
objects/: bundleX.h5  (+19 more)
(+1215 files in other folders)
